Remove outdated English and Romanian translation files; update POT file with English localization keys

--- a/translations/test.pot
+++ b/translations/test.pot
@@ -1,3 +1,11 @@
 {
-    "test": ""
+    "first_name": "First Name",
+    "last_name": "Last Name",
+    "email": "Email",
+    "password": "Password",
+    "confirm_password": "Confirm Password",
+    "register": "Register",
+    "login": "Login",
+    "logout": "Logout",
+    "forgot_password": "Forgot Password"
 }
