--- a/translations/ru.json
+++ b/translations/ru.json
@@ -117,7 +117,50 @@
     "bgTollRechargeBtn": "Пополните свой счет BG-TOLL",
     "eTollRechargeBtn": "Пополните свой счет E-TOLL",
     "carGOboxRechargeBtn": "Пополните свой счет carGObox",
-    "termsContent": "Веб-сайт www.cargotrack.ro, платформа Cargo Track и мобильное приложение являются собственностью Cargo Track Solutions.\nУсловия использования Платформы мониторинга CargoTrack (далее «Условия»), изложенные в настоящем документе, регулируются и будут толковаться в соответствии с законодательством Румынии.\nУслугу мониторинга CargoTrack предоставляет компания Cargo Track Solutions, ул. Константин Брайлою № 10, Орадя, Бихор. Тел: 0374 430 060 Электронная почта: office@cargo, www.cargotrack.ro, J5 / 1747 / 10.10.2012, фискальный код RO 30769457 и предназначена для юридических и физических лиц (далее «Клиенты»).\nИспользуя или получая доступ к приложению CargoTrack или любому приложению (включая мобильные приложения), предоставленному компанией Cargo Track Solutions, вы соглашаетесь соблюдать настоящие Условия.\nCargo Track Solutions владеет правами собственности, включая права интеллектуальной собственности в отношении содержимого сайта (например, текста, изображений, логотипа), а также правами на функциональные возможности, предоставляемые через веб-сайт, мобильное приложение или любой другой канал.\nАвторские права защищены соответствующим законодательством (с возможными гражданскими и уголовными последствиями), поэтому воспроизведение (или любое другое изменение) контента, размещенного на нашем сайте, требует нашего письменного согласия.\n1. Отказ от ответственности (Ограничение ответственности)\nМы не даем гарантии, что доступ к сайту, платформе или мобильному приложению будет бесперебойным и без сбоев.\nCargoTrack не несет ответственности за следующее:",
+    "termsContent": "Веб-сайт www.cargotrack.ro, платформа Cargo Track и мобильное приложение являются собственностью Cargo Track Solutions.
+Условия использования Платформы мониторинга CargoTrack (далее «Условия»), изложенные в настоящем документе, регулируются и будут толковаться в соответствии с законодательством Румынии.
+Услугу мониторинга CargoTrack предоставляет компания Cargo Track Solutions, ул. Константин Брайлою № 10, Орадя, Бихор. Тел: 0374 430 060 Электронная почта: office@cargotrack.ro, www.cargotrack.ro, J5 / 1747 / 10.10.2012, фискальный код RO 30769457 и предназначена для юридических и физических лиц (далее «Клиенты»).
+Используя или получая доступ к приложению CargoTrack или любому приложению (включая мобильные приложения), предоставленному компанией Cargo Track Solutions, вы соглашаетесь соблюдать настоящие Условия.
+Cargo Track Solutions владеет правами собственности, включая права интеллектуальной собственности в отношении содержимого сайта (например, текста, изображений, логотипа), а также правами на функциональные возможности, предоставляемые через веб-сайт, мобильное приложение или любой другой канал.
+Авторские права защищены соответствующим законодательством (с возможными гражданскими и уголовными последствиями), поэтому воспроизведение (или любое другое изменение) контента, размещенного на нашем сайте, требует нашего письменного согласия.
+
+1. Отказ от ответственности (Ограничение ответственности)
+Мы не даем гарантии, что доступ к сайту, платформе или мобильному приложению будет бесперебойным и без сбоев.
+CargoTrack не несет ответственности за следующее:
+Любой прямой или косвенный ущерб или убытки, включая, помимо прочего, нереализованную прибыль, упущенную выгоду и/или неиспользование деловых возможностей, понесенных в результате нефункциональности платформы мониторинга CargoTrack.
+Потеря или повреждение данных содержимого веб-сайта и/или платформы, если это не вызвано нами или не находится под нашим контролем.
+
+2. Использование платформы мониторинга
+Пользователь несет полную ответственность за то, как он будет использовать информацию, генерируемую платформой, и решает, какую информацию будет показывать платформа мониторинга.
+Cargo Track Solutions предлагает услуги мониторинга транспортных средств на базе GPS-оборудования.Собранная информация и данные, отображаемые оборудованием через платформу, включают следующее:
+реальное местоположение транспортных средств на карте;
+отчеты о деятельности (маршрут, пройденные километры, скорость, расход топлива, время простоя/работы, информация о температуре);
+оповещения о различных событиях, заранее установленных Клиентом;
+уведомления о сроках действия документов по техническому обслуживанию.
+
+3. Контент
+Пользователь несет единоличную ответственность за контент, размещаемый на платформе CargoTrack:
+Запрещено размещать порнографическую или насильственную информацию;
+Запрещено размещать неприличную информацию;
+Запрещено размещать информацию, нарушающую закон;
+Запрещено размещать информацию, пропагандирующую наркотики, оружие или жестокость;
+Запрещено размещать информацию, пропагандирующую гомофобию, расизм или клевету;
+Запрещено размещать поврежденные файлы, содержащие вирусы или вредоносное ПО, с намерением повредить программное обеспечение, оборудование или другие компоненты услуг/продуктов, предоставляемых CargoTrack.
+
+4. Стоимость
+Использование платформы мониторинга CargoTrack не является бесплатным. Это осуществляется на основании выбранного абонентского пакета, как указано в контракте между Клиентом и Cargo Track Solutions.
+
+5. Оплата
+Оплату можно осуществить лично, через банковский перевод или непосредственно через платформу CargoTrack.
+Оплата услуг/продуктов, предоставляемых группой компаний CargoTrack, может быть выполнена также непосредственно с личного счета клиента на платформе. В зависимости от предоставляемых услуг/продуктов, оплата может быть направлена одной или нескольким компаниям из группы CargoTrack. При оплате можно выбрать только одну категорию услуг/продуктов (счета выставленные одной компанией из группы CargoTrack).
+Методы оплаты, сроки выставления счетов, приостановка абонементов или расторжение контрактов указаны в контракте между CargoTrack и Клиентом.
+
+6. Закрытие/приостановка аккаунта
+Cargo Track оставляет за собой право закрыть и/или приостановить аккаунты Клиента на условиях, указанных в контракте между CargoTrack и Клиентом.
+Клиент может запросить приостановку услуг до конца календарного месяца. Фактическая приостановка услуг произойдет в следующем месяце после указанной даты.
+
+7. Техническая поддержка
+Техническая поддержка предоставляется по телефону 0374 430 060 или по электронной почте office@cargotrack.ro в рабочие часы с 8:00 до 22:00 с понедельника по пятницу.",
     "version": "Версия",
     "connectToYourAccount": "Войдите в свою учетную запись",
     "connectBtn": "Авторизоваться",
