--- a/translations/ro.json
+++ b/translations/ro.json
@@ -348,5 +348,14 @@
     "paymentBalanceCommission": "Având în vedere că soldul contului este negativ și CargoTrack a acoperit plata taxelor de drum pentru a evita o amendă, pentru această tranzacție se aplică un comision suplimentar de @value% conform contractului.",
     "isSuspendedDueNegativeBalance": "Serviciile au fost suspendate din cauza soldului negativ",
     "russian": "Русский",
-    "events": "Evenimente"
+    "events": "Evenimente",
+    "currentVehicle": "Vehicul curent",
+    "etransportUitViewDeclarationList: " "Listă declarații",
+    "etransportStatusSynced": "Sincronizat",
+    "etransportStatusApproved": "Aprobat",
+    "etransportStatusFailed": "Nereușit",
+    "etransportStatusCanceled": "Anulat",
+    "etransportStatusDraft": "Schiță",
+    "etransportStatusPending": "În așteptare",
+    "etransportUitCreateDeclaration": "Creare declarație"
 }
