--- a/translations/en.json
+++ b/translations/en.json
@@ -349,7 +349,7 @@
     "russian": "Русский",
     "events": "Events",
     "currentVehicle": "Current vehicle",
-    "etransportUitViewDeclarationList: " "Declarations list",
+    "etransportUitViewDeclarationList": "Declarations list",
     "etransportStatusSynced": "Synced",
     "etransportStatusApproved": "Approved",
     "etransportStatusFailed": "Failed",
