--- a/translations/hu.json
+++ b/translations/hu.json
@@ -348,5 +348,14 @@
     "paymentBalanceCommission": "Given that the account balance is negative and CargoTrack has covered the payment of tolls to avoid a fine, this transaction is subject to an additional @value% commission as per the contract.",
     "isSuspendedDueNegativeBalance": "A szolgáltatások a negatív egyenleg miatt felfüggesztésre kerültek",
     "Russian": "Русский",
-    "russian": "Русский"
+    "russian": "Русский",
+    "currentVehicle": "Current vehicle",
+    "etransportUitViewDeclarationList": "Declarations list",
+    "etransportStatusSynced": "Synced",
+    "etransportStatusApproved": "Approved",
+    "etransportStatusFailed": "Failed",
+    "etransportStatusCanceled": "Canceled",
+    "etransportStatusDraft": "Draft",
+    "etransportStatusPending": "Pending",
+    "etransportUitCreateDeclaration": "Create declaration"
 }
