--- a/translations/ro.json
+++ b/translations/ro.json
@@ -350,7 +350,7 @@
     "russian": "Русский",
     "events": "Evenimente",
     "currentVehicle": "Vehicul curent",
-    "etransportUitViewDeclarationList: " "Listă declarații",
+    "etransportUitViewDeclarationList": "Listă declarații",
     "etransportStatusSynced": "Sincronizat",
     "etransportStatusApproved": "Aprobat",
     "etransportStatusFailed": "Nereușit",
