Add new translation keys for device declaration and status in multiple language files

--- a/translations/de.json
+++ b/translations/de.json
@@ -361,5 +361,11 @@
     "scheduleStatusPlanned": "Planned",
     "scheduleStatusCompleted": "Completed",
     "scheduleStatusCanceled": "Canceled",
-    "scheduleStatusOngoing": "Ongoing"
+    "scheduleStatusOngoing": "Ongoing",
+    "createUitDeviceDeclaration": "Create declaration",
+    "etransportUitDeviceDeclarationDateFrom": "Declaration date from",
+    "createuitCode": "Create UIT",
+    "etrasnportuitCodeDateFrom": "Uit date from",
+    "active": "Active",
+    "inactive": "Inactive"
 }
