Fix typo in Romanian translation for schedule status

--- a/translations/ro.json
+++ b/translations/ro.json
@@ -358,7 +358,7 @@
     "etransportStatusDraft": "Schiță",
     "etransportStatusPending": "În așteptare",
     "etransportUitCreateDeclaration": "Creare declarație",
-    "scheduleStatusPlanned": "Planifrcat",
+    "scheduleStatusPlanned": "Planificat",
     "scheduleStatusCompleted": "Finalizat",
     "scheduleStatusCanceled": "Anulat",
     "scheduleStatusOngoing": "În derulare",
