--- a/translations/ru.json
+++ b/translations/ru.json
@@ -351,12 +351,12 @@
     "russian": "Русский",
     "currentVehicle": "Текущий транспорт",
     "etransportUitViewDeclarationList": "Список деклараций",
-    "etransportStatusSynced": "Синхронизирован",
-    "etransportStatusApproved": "",
-    "etransportStatusFailed": "Ошибка",
-    "etransportStatusCanceled": "Отменен",
-    "etransportStatusDraft": "Ченовик",
-    "etransportStatusPending": "В ожидании",
+    "etransportStatusSynced": "Зарегистрировано",
+    "etransportStatusApproved": "В процессе",
+    "etransportStatusFailed": "Неудачно",
+    "etransportStatusCanceled": "Отменено",
+    "etransportStatusDraft": "В процессе",
+    "etransportStatusPending": "Ожидает",
     "etransportUitCreateDeclaration": "Создать декларацию",
     "scheduleStatusPlanned": "Запланировано",
     "scheduleStatusCompleted": "Выполнено",
