--- a/translations/en.json
+++ b/translations/en.json
@@ -350,11 +350,11 @@
     "events": "Events",
     "currentVehicle": "Current vehicle",
     "etransportUitViewDeclarationList": "Declarations list",
-    "etransportStatusSynced": "Synced",
-    "etransportStatusApproved": "Approved",
+    "etransportStatusSynced": "Registered",
+    "etransportStatusApproved": "In progress",
     "etransportStatusFailed": "Failed",
     "etransportStatusCanceled": "Canceled",
-    "etransportStatusDraft": "Draft",
+    "etransportStatusDraft": "In progress",
     "etransportStatusPending": "Pending",
     "etransportUitCreateDeclaration": "Create declaration",
     "scheduleStatusPlanned": "Planned",
