--- a/translations/hu.json
+++ b/translations/hu.json
@@ -351,11 +351,11 @@
     "russian": "Русский",
     "currentVehicle": "Current vehicle",
     "etransportUitViewDeclarationList": "Declarations list",
-    "etransportStatusSynced": "Synced",
-    "etransportStatusApproved": "Approved",
+    "etransportStatusSynced": "Registered",
+    "etransportStatusApproved": "In progress",
     "etransportStatusFailed": "Failed",
     "etransportStatusCanceled": "Canceled",
-    "etransportStatusDraft": "Draft",
+    "etransportStatusDraft": "In progress",
     "etransportStatusPending": "Pending",
     "etransportUitCreateDeclaration": "Create declaration",
     "scheduleStatusPlanned": "Planned",
