Add cancellation messages to translations for multiple languages

--- a/translations/en.json
+++ b/translations/en.json
@@ -366,5 +366,8 @@
     "createuitCode": "Create UIT",
     "etransportuitCodeDateFrom": "Uit date from",
     "active": "Active",
-    "inactive": "Inactive"
+    "inactive": "Inactive",
+    "etransportScheduledCanceledDescription": "Declaration was canceled, you can't modify it anymore!",
+    "etransportScheduledCanceledTitle": "Declaration was  canceled",
+    "schedulerCantModified": "You can't modify the declaration anymore!"
 }
