--- a/translations/ro.json
+++ b/translations/ro.json
@@ -57,9 +57,9 @@
     "cargoboxStatusAutomaticallySuspended": "Suspendat automat",
     "etransportTitle": "Coduri UIT",
     "etransportHeader": "Coduri UIT",
-    "etransportAdd": "Adauga",
-    "etransportEdit": "Modifica",
-    "etransportAddUITCode": "Adauga cod UIT",
+    "etransportAdd": "Adaugă",
+    "etransportEdit": "Salvează",
+    "etransportAddUITCode": "Adaugă cod UIT",
     "etransportAddUITCodeExistsError": "Codul UIT exista deja!",
     "etransportAddUITCodeNotAcceptable": "Codul UIT nu este valid. Asigură-te că acesta are exact 16 caractere și nu conține literele O, I, Z, S, G sau B.",
     "etransportCode": "Cod",
@@ -69,30 +69,30 @@
     "etransportVehicleError": "Alege Vehicul",
     "etransportVehicleLicence": "Cap tractor",
     "etransportStatusManual": "Manual",
-    "etransportStatusInitiate": "Initiate",
-    "etransportStatusActive": "Active",
-    "etransportStatusExpired": "Expired",
+    "etransportStatusInitiate": "Inițiat",
+    "etransportStatusActive": "Activ",
+    "etransportStatusExpired": "Expirat",
     "etransportScheduleCompleted": "Data trimise",
-    "etransportScheduleOngoing": "In Desfasurare",
-    "etransportSchedulePlanned": "Planificata",
-    "etransportScheduleCanceled": "Anulata",
+    "etransportScheduleOngoing": "In Desfăsurare",
+    "etransportSchedulePlanned": "Planificată",
+    "etransportScheduleCanceled": "Anulată",
     "etransportScheduleCancel": "ANULARE PLANIFICARE",
     "etransportStopTransmission": "OPRESTE TRANSMISIA ACUM",
-    "etransportScheduleSaved": "Planificarea a fost salvata cu succes!",
-    "etransportScheduleTransmissionStoped": "Transmisia a fost oprita cu succes!",
-    "etransportScheduleTransmissionCanceled": "Transmisia a fost anulata cu succes!",
+    "etransportScheduleSaved": "Planificarea a fost salvată cu succes!",
+    "etransportScheduleTransmissionStoped": "Transmisia a fost oprită cu succes!",
+    "etransportScheduleTransmissionCanceled": "Transmisia a fost anulată cu succes!",
     "etransportScheduleExisting": "Există un program pentru vehiculul selectat, vă rugăm să modificați programul existent.",
-    "etransportSearchUITCode": "Cauta cod UIT sau vehicul curent",
-    "etransportEmptyUITList": "Nu aveți coduri UIT asociat firmei dvs. in sistem national eTransportpentru monitoringea transporturilor pe territorio Romaniei",
-    "etransportAddCodeManually": "Adaugati manual un cod UIT?",
-    "etransportChangeVehicle": "Schimba vehicul",
-    "etransportUitInitialVehicle": "Vehicul initial",
+    "etransportSearchUITCode": "Căuta cod UIT sau vehicul curent",
+    "etransportEmptyUITList": "Nu aveți coduri UIT asociat firmei dvs. in sistem national eTransport pentru monitoringea transporturilor pe territorio Romaniei",
+    "etransportAddCodeManually": "Adăugati manual un cod UIT?",
+    "etransportChangeVehicle": "Schimbă vehicul",
+    "etransportUitInitialVehicle": "Vehicul iniăial",
     "etransportTow1": "Remorcă 1",
     "etransportTow2": "Remorcă 2",
     "etransportUitTractorHead": "Cap tractor",
     "etransportUitStartGPSData": "Start transmitere date GPS",
     "etransportUitStopGPSData": "Stop transmitere date GPS",
-    "etransportUitGPSDataStarted": "Transmiterea datelor GPS este pornita",
+    "etransportUitGPSDataStarted": "Transmiterea datelor GPS este pornită",
     "etransportUitSaveAndClose": "Salveaza si inchide",
     "etransportUitStartDialogTitle": "Planifica transmiterea datelor GPS",
     "etransportUitChangeVehiculeDialogTitle": "Schimbare vehicul",
@@ -367,5 +367,8 @@
     "createuitCode": "Creare Uit",
     "etransportuitCodeDateFrom": "Data de la",
     "active": "Activ",
-    "inactive": "Inactiv"
+    "inactive": "Inactiv",
+    "etransportScheduledCanceledDescription": "Declarația a fost anulată, și nu poate fi modificată.",
+    "etransportScheduledCanceledTitle": "Declarația a fost anulată",
+    "schedulerCantModified": "Declarația nu poate fi suprascrisă."
 }
