--- a/translations/ru.json
+++ b/translations/ru.json
@@ -367,5 +367,8 @@
     "createuitCode": "Создание UIT",
     "etransportuitCodeDateFrom": "Дата от",
     "active": "Активный",
-    "inactive": "Неактивный"
+    "inactive": "Неактивный",
+    "etransportScheduledCanceledDescription": "Декларация была отменена и не может быть изменена!",
+    "etransportScheduledCanceledTitle": "Декларация была отменена",
+    "schedulerCantModified": "Декларация не может быть изменена!"
 }
