--- a/translations/ro.json
+++ b/translations/ro.json
@@ -370,5 +370,6 @@
     "inactive": "Inactiv",
     "etransportScheduledCanceledDescription": "Declarația a fost anulată, și nu poate fi modificată.",
     "etransportScheduledCanceledTitle": "Declarația a fost anulată",
-    "schedulerCantModified": "Declarația nu poate fi suprascrisă."
+    "schedulerCantModified": "Declarația nu poate fi suprascrisă.",
+    "emptyList": "Lista este goală"
 }
