Update Romanian translations for device declaration date fields

--- a/translations/ro.json
+++ b/translations/ro.json
@@ -363,9 +363,9 @@
     "scheduleStatusCanceled": "Anulat",
     "scheduleStatusOngoing": "În derulare",
     "createUitDeviceDeclaration": "Creare declarație",
-    "etransportUitDeviceDeclarationDateFrom": "Data de la",
+    "etransportUitDeviceDeclarationDateFrom": "Data început",
     "createuitCode": "Creare Uit",
-    "etransportuitCodeDateFrom": "Data de la",
+    "etransportuitCodeDateFrom": "Data început",
     "active": "Activ",
     "inactive": "Inactiv",
     "etransportScheduledCanceledDescription": "Declarația a fost anulată, și nu poate fi modificată.",
