--- a/translations/ro.json
+++ b/translations/ro.json
@@ -371,5 +371,6 @@
     "etransportScheduledCanceledDescription": "Declarația a fost anulată, și nu poate fi modificată.",
     "etransportScheduledCanceledTitle": "Declarația a fost anulată",
     "schedulerCantModified": "Declarația nu poate fi suprascrisă.",
-    "emptyList": "Lista este goală"
+    "emptyList": "Lista este goală",
+    "schedulerDoesNotMeetMinimumDurationRequirements": "Durata declarației nu corespunde cerințelor minime de 30 minute"
 }
