--- a/translations/hu.json
+++ b/translations/hu.json
@@ -371,5 +371,6 @@
     "etransportScheduledCanceledDescription": "Declaration was canceled, you can't modify it anymore!",
     "etransportScheduledCanceledTitle": "Declaration was  canceled",
     "schedulerCantModified": "You can't modify the declaration anymore!",
-    "emptyList": "Empty list"
+    "emptyList": "Empty list",
+    "schedulerDoesNotMeetMinimumDurationRequirements": "The declaration does not meet the minimum duration requirements of 30 minutes!"
 }
