Update branch timer value and add error messages to translations for multiple languages

--- a/translations/en.json
+++ b/translations/en.json
@@ -371,5 +371,7 @@
     "etransportScheduledCanceledTitle": "Declaration was  canceled",
     "schedulerCantModified": "You can't modify the declaration anymore!",
     "emptyList": "Empty list",
-    "schedulerDoesNotMeetMinimumDurationRequirements": "The declaration does not meet the minimum duration requirements of 30 minutes!"
+    "schedulerDoesNotMeetMinimumDurationRequirements": "The declaration does not meet the minimum duration requirements of 30 minutes!",
+    "etransportLastSentPositionError": "At the moment, we cannot display information about position transmission due to a technical error. Please try again later."
+
 }
