--- a/translations/ru.json
+++ b/translations/ru.json
@@ -372,5 +372,7 @@
     "etransportScheduledCanceledTitle": "Декларация была отменена",
     "schedulerCantModified": "Декларация не может быть изменена!",
     "emptyList": "Список пуст",
-    "schedulerDoesNotMeetMinimumDurationRequirements": "Декларация не может быть запланирована, так как она не соответствует минимальным требованиям по времени 30 минут!"
+    "schedulerDoesNotMeetMinimumDurationRequirements": "Декларация не может быть запланирована, так как она не соответствует минимальным требованиям по времени 30 минут!",
+    "etransportLastSentPositionError": "В настоящее время мы не можем отобразить информацию о передаче позиции из-за технической ошибки. Пожалуйста, повторите попытку позже."
+
 }
