--- a/translations/de.json
+++ b/translations/de.json
@@ -372,5 +372,6 @@
     "etransportScheduledCanceledTitle": "Declaration was  canceled",
     "schedulerCantModified": "You can't modify the declaration anymore!",
     "emptyList": "Empty list",
-    "schedulerDoesNotMeetMinimumDurationRequirements": "The declaration does not meet the minimum duration requirements of 30 minutes!"
+    "schedulerDoesNotMeetMinimumDurationRequirements": "The declaration does not meet the minimum duration requirements of 30 minutes!",
+    "etransportLastSentPositionError": "Derzeit können wir aufgrund eines technischen Fehlers keine Informationen zur Positionsübertragung anzeigen. Bitte versuchen Sie es später erneut."
 }
