--- a/translations/ro.json
+++ b/translations/ro.json
@@ -372,5 +372,6 @@
     "etransportScheduledCanceledTitle": "Declarația a fost anulată",
     "schedulerCantModified": "Declarația nu poate fi suprascrisă.",
     "emptyList": "Lista este goală",
-    "schedulerDoesNotMeetMinimumDurationRequirements": "Durata declarației nu corespunde cerințelor minime de 30 minute"
+    "schedulerDoesNotMeetMinimumDurationRequirements": "Durata declarației nu corespunde cerințelor minime de 30 minute",
+    "etransportLastSentPositionError": "La moment nu vă putem afișa informații despre transmiterea poziției din cauza unei erori tehnice. Vă rugăm să reîncercați mai târziu."
 }
