--- a/translations/ro.json
+++ b/translations/ro.json
@@ -373,5 +373,7 @@
     "schedulerCantModified": "Declarația nu poate fi suprascrisă.",
     "emptyList": "Lista este goală",
     "schedulerDoesNotMeetMinimumDurationRequirements": "Durata declarației nu corespunde cerințelor minime de 30 minute",
-    "etransportLastSentPositionError": "La moment nu vă putem afișa informații despre transmiterea poziției din cauza unei erori tehnice. Vă rugăm să reîncercați mai târziu."
+    "etransportLastSentPositionError": "La moment nu vă putem afișa informații despre transmiterea poziției din cauza unei erori tehnice. Vă rugăm să reîncercați mai târziu.",
+    "plCargoboxBalance": "Sold curent carGObox Polonia",
+    "plCarGOboxRechargeBtn": "Reîncarcă contul carGObox Polonia"
 }
