--- a/translations/hu.json
+++ b/translations/hu.json
@@ -373,6 +373,7 @@
     "schedulerCantModified": "You can't modify the declaration anymore!",
     "emptyList": "Empty list",
     "schedulerDoesNotMeetMinimumDurationRequirements": "The declaration does not meet the minimum duration requirements of 30 minutes!",
-    "etransportLastSentPositionError": "Jelenleg nem tudjuk megjeleníteni a pozícióátvitelre vonatkozó információkat technikai hiba miatt. Kérjük, próbálja újra később."
-
+    "etransportLastSentPositionError": "Jelenleg nem tudjuk megjeleníteni a pozícióátvitelre vonatkozó információkat technikai hiba miatt. Kérjük, próbálja újra később.",
+    "plCargoboxBalance": "carGObox Lengyelország egyenleg",
+    "plCarGOboxRechargeBtn": "carGObox Lengyelország egyenleg feltöltése"
 }
