--- a/translations/en.json
+++ b/translations/en.json
@@ -374,5 +374,5 @@
     "schedulerDoesNotMeetMinimumDurationRequirements": "The declaration does not meet the minimum duration requirements of 30 minutes!",
     "etransportLastSentPositionError": "At the moment, we cannot display information about position transmission due to a technical error. Please try again later.",
     "plCargoboxBalance": "carGObox Poland balance",
-    "plCarGOboxRechargeBtn": "Recharge carGObox Poland account"
+    "plCarGOboxRechargeBtn": "Recharge account"
 }
