--- a/translations/de.json
+++ b/translations/de.json
@@ -375,5 +375,6 @@
     "schedulerDoesNotMeetMinimumDurationRequirements": "The declaration does not meet the minimum duration requirements of 30 minutes!",
     "etransportLastSentPositionError": "Derzeit können wir aufgrund eines technischen Fehlers keine Informationen zur Positionsübertragung anzeigen. Bitte versuchen Sie es später erneut.",
     "plCargoboxBalance": "carGObox-Guthaben Polen",
-    "plCarGOboxRechargeBtn": "Konto aufladen"
+    "plCarGOboxRechargeBtn": "Konto aufladen",
+    "plCargobox": "carGObox Polen"
 }
