--- a/translations/de.json
+++ b/translations/de.json
@@ -374,7 +374,7 @@
     "emptyList": "Empty list",
     "schedulerDoesNotMeetMinimumDurationRequirements": "The declaration does not meet the minimum duration requirements of 30 minutes!",
     "etransportLastSentPositionError": "Derzeit können wir aufgrund eines technischen Fehlers keine Informationen zur Positionsübertragung anzeigen. Bitte versuchen Sie es später erneut.",
-    "plCargoboxBalance": "carGObox-Guthaben Polen",
+    "plCargoboxBalance": "Guthaben:",
     "plCarGOboxRechargeBtn": "Konto aufladen",
     "plCargobox": "carGObox Polen"
 }
