--- a/translations/en.json
+++ b/translations/en.json
@@ -373,7 +373,7 @@
     "emptyList": "Empty list",
     "schedulerDoesNotMeetMinimumDurationRequirements": "The declaration does not meet the minimum duration requirements of 30 minutes!",
     "etransportLastSentPositionError": "At the moment, we cannot display information about position transmission due to a technical error. Please try again later.",
-    "plCargoboxBalance": "carGObox Poland balance",
+    "plCargoboxBalance": "Balance:",
     "plCarGOboxRechargeBtn": "Recharge account",
     "plCargobox": "carGObox Poland"
 }
