--- a/translations/hu.json
+++ b/translations/hu.json
@@ -374,7 +374,7 @@
     "emptyList": "Empty list",
     "schedulerDoesNotMeetMinimumDurationRequirements": "The declaration does not meet the minimum duration requirements of 30 minutes!",
     "etransportLastSentPositionError": "Jelenleg nem tudjuk megjeleníteni a pozícióátvitelre vonatkozó információkat technikai hiba miatt. Kérjük, próbálja újra később.",
-    "plCargoboxBalance": "carGObox Lengyelország egyenleg",
+    "plCargoboxBalance": "Egyenleg:",
     "plCarGOboxRechargeBtn": "Fiók feltöltése",
     "plCargobox": "carGObox Lengyelország"
 }
