--- a/translations/ro.json
+++ b/translations/ro.json
@@ -374,7 +374,7 @@
     "emptyList": "Lista este goală",
     "schedulerDoesNotMeetMinimumDurationRequirements": "Durata declarației nu corespunde cerințelor minime de 30 minute",
     "etransportLastSentPositionError": "La moment nu vă putem afișa informații despre transmiterea poziției din cauza unei erori tehnice. Vă rugăm să reîncercați mai târziu.",
-    "plCargoboxBalance": "Sold curent carGObox Polonia",
+    "plCargoboxBalance": "Sold curent:",
     "plCarGOboxRechargeBtn": "Reîncarcă contul",
     "plCargobox": "carGObox Polonia"
 }
