--- a/translations/ru.json
+++ b/translations/ru.json
@@ -374,7 +374,7 @@
     "emptyList": "Список пуст",
     "schedulerDoesNotMeetMinimumDurationRequirements": "Декларация не может быть запланирована, так как она не соответствует минимальным требованиям по времени 30 минут!",
     "etransportLastSentPositionError": "В настоящее время мы не можем отобразить информацию о передаче позиции из-за технической ошибки. Пожалуйста, повторите попытку позже.",
-    "plCargoboxBalance": "Баланс carGObox Польша",
+    "plCargoboxBalance": "Баланс:",
     "plCarGOboxRechargeBtn": "Пополнить счет",
     "plCargobox": "carGObox Польша"
 }
