--- a/translations/ro.json
+++ b/translations/ro.json
@@ -364,7 +364,7 @@
     "scheduleStatusOngoing": "În derulare",
     "createUitDeviceDeclaration": "Creare declarație",
     "etransportUitDeviceDeclarationDateFrom": "Data început",
-    "createuitCode": "Creare Uit",
+    "createuitCode": "Creare declarație ANAF",
     "etransportuitCodeDateFrom": "Data început",
     "active": "Activ",
     "inactive": "Inactiv",
