--- a/translations/hu.json
+++ b/translations/hu.json
@@ -364,7 +364,7 @@
     "scheduleStatusOngoing": "Ongoing",
     "createUitDeviceDeclaration": "Create declaration",
     "etransportUitDeviceDeclarationDateFrom": "Declaration date from",
-    "createuitCode": "Create UIT",
+    "createuitCode": "Create declaration ANAF",
     "etransportuitCodeDateFrom": "Uit date from",
     "active": "Active",
     "inactive": "Inactive",
