--- a/translations/ro.json
+++ b/translations/ro.json
@@ -376,5 +376,6 @@
     "etransportLastSentPositionError": "La moment nu vă putem afișa informații despre transmiterea poziției din cauza unei erori tehnice. Vă rugăm să reîncercați mai târziu.",
     "plCargoboxBalance": "Sold curent:",
     "plCarGOboxRechargeBtn": "Reîncarcă contul",
-    "plCargobox": "carGObox Polonia"
+    "plCargobox": "carGObox Polonia",
+    "noRoadtaxInfo": "Nu există informații despre taxa de drum."
 }
